2005-06-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-find-buffer-file-coding-system): Don't examine
	charset of tar files.

2005-06-04  Luc Teirlinck  <teirllm@auburn.edu>

	* gnus-art.el (article-update-date-lapsed): Use `save-match-data'.

2005-06-04  Lute Kamstra  <lute@gnu.org>

	* nnfolder.el (nnfolder-read-folder): Make sure that undo
	information is never recorded.

2005-06-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-art.el (gnus-emphasis-alist): Disable the strikethru thingy.

2005-06-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* pop3.el (pop3-apop): Run md5 in the binary mode.

	* starttls.el (starttls-set-process-query-on-exit-flag):
	Use eval-and-compile.

2005-05-31  Simon Josefsson  <jas@extundo.com>

	* smime.el (smime-replace-in-string): Define.
	(smime-cert-by-ldap-1): Use it.

2005-05-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-display-x-face): Replace
	process-kill-without-query by gnus-set-process-query-on-exit-flag.

	* gnus-util.el (gnus-set-process-query-on-exit-flag): Alias to
	set-process-query-on-exit-flag or process-kill-without-query.

	* html2text.el (html2text-fix-paragraphs): Use `while - re-search'
	loop instead of replace-regexp.

	* imap.el (imap-ssl-open): Use set-process-query-on-exit-flag
	instead of process-kill-without-query if it is available.

	* lpath.el: Fbind ldap-search-entries.

	* mm-util.el (mm-insert-file-contents): Bind find-file-hook
	instead of find-file-hooks if it is available.

	* mml1991.el: Bind pgg-default-user-id when compiling.

	* mml2015.el: Bind pgg-default-user-id when compiling.

	* nndraft.el (nndraft-request-associate-buffer):
	Use write-contents-functions instead of write-contents-hooks if it is
	available.

	* nnheader.el (nnheader-find-file-noselect): Bind find-file-hook
	instead of find-file-hooks if it is available.

	* nntp.el (nntp-open-connection): Replace
	process-kill-without-query by gnus-set-process-query-on-exit-flag.